--- a/src/App.css
+++ b/src/App.css
@@ -9,6 +9,14 @@ ul {
   margin: 2rem;
 }
 
+#productList > * {
+  border: 1px solid black;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 1rem;
+}
+
 img {
-  width: 10%;
+  width: 30%;
 }
